# neurographrag

./: .gitignore  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  LICENSE-APACHE  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  deny.toml  llms-full.txt  llms.pt-BR.txt  llms.txt
.github/workflows/: ci.yml  release.yml
benches/: cli_benchmarks.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  AGENT_PROTOCOL.md  AGENT_PROTOCOL.pt-BR.md  CLAUDE.md  CLAUDE.pt-BR.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md
docs/schemas/: README.md  cleanup-orphans.schema.json  debug-schema.schema.json  edit.schema.json  forget.schema.json  graph-entities.schema.json  graph.schema.json  health.schema.json  history.schema.json  hybrid-search.schema.json  init.schema.json  link.schema.json  list.schema.json  migrate.schema.json  namespace-detect.schema.json  optimize.schema.json  purge.schema.json  read.schema.json  recall.schema.json  related.schema.json  remember.schema.json  rename.schema.json  restore.schema.json  stats.schema.json  sync-safe-copy.schema.json  unlink.schema.json  vacuum.schema.json
migrations/: V001__init.sql  V002__vec_tables.sql  V003__fts_tables.sql  V004__triggers.sql  V005__indexes.sql
skill/neurographrag-en/: SKILL.md
skill/neurographrag-pt/: SKILL.md
src/: chunking.rs  cli.rs  constants.rs  embedder.rs  errors.rs  graph.rs  i18n.rs  lib.rs  main.rs  namespace.rs  output.rs  paths.rs  pragmas.rs
src/commands/: cleanup_orphans.rs  debug_schema.rs  edit.rs  init.rs  (+22 more)
tests/: concurrency_hardened.rs  cookbook_recipes.rs  doc_contract_integration.rs  exit_codes_integration.rs  i18n_bilingual_integration.rs  installed_binary_smoke.rs  integration.rs  property_based.rs  regression_v2_0_4.rs  schema_migration_integration.rs  security_hardening.rs  signal_handling_integration.rs  v2_breaking_integration.rs
(+9 files in other folders)
